boltffi_tests/fixtures/negative_scanner/non_literal_enum_discriminant.rs
#[data]
pub enum Status {
    Active = BASE + 1,
}
